refactor(openreac): apply review feedback on parallel bundles
Signed-off-by: lamoletoscar <lamoletoscar@proton.me>